--- a/src/statics/core.scss
+++ b/src/statics/core.scss
@@ -3,7 +3,10 @@
     --default-padding: 32px;
     --textgray: #2c3e50;
     --font-size: 14px;
-    --textactive: #42b983;
+    --textactive: var(--secondarycolour);
+    --primarycolour: #00203FFF;
+    --secondarycolour: #9CC3D5FF;
+    --thirdcolour: #FFFFFFFF;
 }
 
 body, html {
@@ -35,11 +38,12 @@ body, html {
     top: 0px;
     width: 100%;
     box-shadow: 0 1px 0 0 rgba(139,141,157,.05), 0 5px 10px 0 rgba(65,71,108,.15);
+    background-image: linear-gradient(var(--secondarycolour), var(--primarycolour));
 }
 
 #nav a {
     font-weight: bold;
-    color: var(--textgray);
+    color: var(--thirdcolour);
     text-decoration: none;
 }
 
@@ -60,6 +64,25 @@ body, html {
     direction: rtl;
     flex: 2;
 }
+
+.nav-icon {
+    display: none;
+    direction: rtl;
+    order: 3;
+    margin-left: 17px;
+    cursor: pointer;
+    font-size: 2.5rem;
+    color: #FFFFFFFF;
+}
+
+@media screen and (max-width: 640px) {
+    .nav-router-link {
+      display: none;
+    }
+    .nav-icon {
+      display: flex;
+    }
+  }
 
 #body-view {
     margin-block-start: 1.0em;
