--- a/src/statics/core.scss
+++ b/src/statics/core.scss
@@ -38,12 +38,11 @@ body, html {
     top: 0px;
     width: 100%;
     box-shadow: 0 1px 0 0 rgba(139,141,157,.05), 0 5px 10px 0 rgba(65,71,108,.15);
-    background-image: linear-gradient(var(--secondarycolour), var(--primarycolour));
 }
 
 #nav a {
     font-weight: bold;
-    color: var(--thirdcolour);
+    color: var(--primarycolour);
     text-decoration: none;
 }
 
@@ -73,7 +72,6 @@ body, html {
     margin-left: 17px;
     cursor: pointer;
     font-size: 2.5rem;
-    color: #FFFFFFFF;
 }
 
 @media screen and (max-width: 640px) {
