install axios, added role input, fixed form input

--- a/src/statics/core.scss
+++ b/src/statics/core.scss
@@ -99,6 +99,10 @@ button, input {
     border: 1px solid black;
 }
 
+.main-button {
+    background-color: var(--primarycolour);
+}
+
 @media screen and (max-width: 640px) {
     .nav-router-link {
       display: none;
