disable button before form filled out correctly

--- a/src/statics/core.scss
+++ b/src/statics/core.scss
@@ -110,6 +110,12 @@ button, input {
     background-color: var(--primarycolour);
     width: 100%;
     border-radius: 3px;
+    margin: 15px 0px;
+    height: 40px;
+}
+
+.form-main-button:disabled {
+    background-color: rgba(0, 32, 63, 0.4);
 }
 
 .sign-up-form p {
