--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -10,5 +10,5 @@
     --errorcolour: #FF0000FF; //rgb(255,0,0)
     --successcolour: #22BB33FF; //rgb(34,187,51)
     --boxshadowcolour: #000000FF; //rgb(0,0,0)
-
+    --medium-size: 640 ;
 }
