--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,8 +3,14 @@
 
 body, html {
     margin: 0px !important;
+    padding:0px;
     font-size: var(--font-size);
     font-family: 'Montserrat', sans-serif;
+    min-width: 300px;
+}
+
+body {
+    margin: 0px !important;
 }
 
 label, input, textarea {
@@ -31,12 +37,22 @@ button, input {
     color: var(--textgray);
 }
 
+#body-view {
+    margin-top: 0px !important;
+}
+
 #nav > .content-wrapper,
 #body-view > .content-wrapper {
     padding-left: 20px;
     padding-right: 20px;
     max-width: var(--max-width);
     margin: auto;
+    position:relative;
+}
+
+#body-view > .content-wrapper {
+    padding-top: 40px;
+    min-height: calc(100vh - 120px);
 }
 
 #nav {
@@ -86,53 +102,16 @@ button, input {
     font-size: 2.5rem;
 }
 
-.form-container {
-    max-width: 350px;
-    margin: 0 auto;
-    border: 1px solid black;
-    border-radius: 3px;
-    box-shadow: 0px 2px 10px -3px;
-}
-
-.form-main-button {
-    background-color: var(--primarycolour);
-    width: 100%;
-    border-radius: 3px;
-    margin: 15px 0px;
-    height: 40px;
-}
-
-.form-main-button:disabled {
-    background-color: rgba(0, 32, 63, 0.4);
-    cursor: default;
-}
-
-.sign-up-form p {
-    margin-top: 5px;
-    margin-bottom: 0px;
-    color: var(--errorcolour);
-}
-
-.sign-up-form {
-    margin: 0px auto;
-    max-width: 300px;
-}
-
 .error {
     border-color: var(--errorcolour);
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 640px ) {
     .nav-router-link {
       display: none;
     }
     .nav-icon {
       display: flex;
-    }
-    .form-container {
-        max-width: 350px;
-        margin: 0 auto;
-        border: none;
     }
   }
 
