--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -11,4 +11,6 @@
     --successcolour: #22BB33FF; //rgb(34,187,51)
     --boxshadowcolour: #000000FF; //rgb(0,0,0)
     --medium-size: 640px ;
+    --boxshadowcolour2:  rgba(139,141,157,.3);
+    --hovercolour:#708ab0;
 }
