--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -10,6 +10,7 @@
     --errorcolour: #FF0000FF; //rgb(255,0,0)
     --successcolour: #22BB33FF; //rgb(34,187,51)
     --boxshadowcolour: #000000FF; //rgb(0,0,0)
+    --labelcolour: rgba(0, 32, 63, 0.5);
     --medium-size: 640px ;
     --boxshadowcolour2:  rgba(139,141,157,.3);
     --hovercolour:#708ab0;
