Update Notification Styling

--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -7,8 +7,8 @@
     --primarycolour: #00203FFF; //rgb(0, 32, 63)
     --secondarycolour: #4AC959; //rgb(156, 195, 213)
     --bgcolour: #FFFFFFFF;  //rgb(255, 255, 255)
-    --errorcolour: #FF0000FF; //rgb(255,0,0)
-    --successcolour: #22BB33FF; //rgb(34,187,51)
+    --errorcolour: #dc3545; //rgb(255,0,0)
+    --successcolour: #20c997; //rgb(34,187,51)
     --boxshadowcolour: #000000FF; //rgb(0,0,0)
     --medium-size: 640px ;
     --boxshadowcolour2:  rgba(139,141,157,.3);
