--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -7,7 +7,7 @@
     --primarycolour: #00203FFF; //rgb(0, 32, 63)
     --secondarycolour: #4AC959FF; //rgb(156, 195, 213)
     --bgcolour: #FFFFFFFF;  //rgb(255, 255, 255)
-    --errorcolour: #dc3545; //rgb(255,0,0)
+    --errorcolour: #DC3545; //rgb(255,0,0)
     --successcolour: #20c997; //rgb(34,187,51)
     --boxshadowcolour: #000000FF; //rgb(0,0,0)
     --labelcolour: rgba(0, 32, 63, 0.5);
@@ -16,4 +16,9 @@
     --cancelcolour: #ACACACFF; //rgb(172, 172, 172)
     --hovercolour:#1dbf73;
     --disabledcolour: rgb(221,221,221);
+    --graycolour: #ACACACFF;
+    --hover-btnclosecolour: #DC1717FF;
+    --btnclosecolour: #D95D5DFF;
+    --rmsectorcolour: #D95D5DFF;
+    --whitecolour: #FFFFFFFF;
 }
