--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -5,7 +5,8 @@
     --font-size: 14px;
     --textactive: var(--secondarycolour);
     --primarycolour: #00203FFF; //rgb(0, 32, 63)
-    --secondarycolour: #4AC959FF; //rgb(156, 195, 213)
+    --secondarycolour: #4AC959FF; //rgb(74, 201, 89)
+    --secondarycolour-hover: rgba(74, 201, 89, 0.1);
     --bgcolour: #FFFFFFFF;  //rgb(255, 255, 255)
     --errorcolour: #DC3545; //rgb(255,0,0)
     --successcolour: #20c997; //rgb(34,187,51)
