add closed connection view, remove send offer when connection is closed

--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -9,6 +9,7 @@
     --secondarycolour-hover: rgba(74, 201, 89, 0.1);
     --bgcolour: #FFFFFFFF;  //rgb(255, 255, 255)
     --errorcolour: #DC3545; //rgb(255,0,0)
+    --errorcolourlight: #fde4e7;
     --successcolour: #20c997; //rgb(34,187,51)
     --boxshadowcolour: #000000FF; //rgb(0,0,0)
     --labelcolour: rgba(0, 32, 63, 0.5);
