Finalise Send Offer

--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -5,6 +5,7 @@
     --font-size: 14px;
     --textactive: var(--secondarycolour);
     --primarycolour: #00203FFF; //rgb(0, 32, 63)
+    --primarycolour-hover: rgba(0, 32, 63, 0.8);
     --secondarycolour: #4AC959FF; //rgb(74, 201, 89)
     --secondarycolour-hover: rgba(74, 201, 89, 0.1);
     --bgcolour: #FFFFFFFF;  //rgb(255, 255, 255)
