--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -24,4 +24,6 @@
     --btnclosecolour: #D95D5DFF;
     --rmsectorcolour: #D95D5DFF;
     --whitecolour: #FFFFFFFF;
+    --infobgcolour: #Cff2FCFF; //rgb(207, 242, 252)
+    --infocolour: #004770FF; //rgb(0, 71, 112)
 }
