--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -58,6 +58,15 @@
   background-color: var(--disabledcolour);
 }
 
+.delete-btn {
+  color: var(--whitecolour);
+  background-color: var(--btnclosecolour);
+}
+
+.delete-btn:hover {
+  background-color: var(--hover-btnclosecolour);
+}
+
 .general-btn {
   background-color: var(--secondarycolour);
   color: var(--whitecolour);
