AE Request to finish connection and GT response to AE request

--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -20,6 +20,7 @@
     --hovercolour:#1dbf73;
     --disabledcolour: rgb(221,221,221);
     --graycolour: #ACACACFF;
+    --graycolour-hover: #666666FF;
     --hover-btnclosecolour: #DC1717FF;
     --btnclosecolour: #D95D5DFF;
     --rmsectorcolour: #D95D5DFF;
