--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -11,6 +11,20 @@
   cursor: default;
 }
 
+.login-with-google-btn {
+  background-color: var(--whitecolour);
+  color: var();
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  width: 100%;
+  border-radius: 3px;
+  margin: 0px 0px 15px 0px;
+}
+
+.login-with-google-btn:disabled {
+background-color: rgba(0, 32, 63, 0.4);
+cursor: default;
+}
+
 .save-profile-btn {
   background-color: var(--secondarycolour);
   color: var(--whitecolour);
