Profile detail progress bar

--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -27,4 +27,6 @@
     --whitecolour: #FFFFFFFF;
     --infobgcolour: #Cff2FCFF; //rgb(207, 242, 252)
     --infocolour: #004770FF; //rgb(0, 71, 112)
+    --yellowcolour: #FADF11;
+    --lightyellowcolour: #FFF080;
 }
