Payment list update

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -51,6 +51,7 @@ button, input {
 
 #body-view > .content-wrapper {
     padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 #nav {
@@ -128,6 +129,7 @@ input {
     margin-block-start: 1.0em;
     margin-block-end: 1.0em;
     padding-top: 90px;
+    padding-bottom: 90px;
 }
 
 .fa-google {
