--- a/src/styles/varriables.scss
+++ b/src/styles/varriables.scss
@@ -29,4 +29,5 @@
     --infocolour: #004770FF; //rgb(0, 71, 112)
     --yellowcolour: #FADF11;
     --lightyellowcolour: #FFF080;
+    --footer-font-size: 18px;
 }
